# HIVE

./: .dockerignore  .env.example  .gitignore  DELETION_MANIFEST_v1.16.txt  DEPLOYMENT-ORDER.md  Dockerfile  FROZEN_FILES_SHA256.txt  HIVE-KOYEB-PRODUCTION-ENV.txt  HIVE-KOYEB-SECRETS-ONLY.env  HIVE-PRODUCTION-READINESS-REPORT.md  HIVE-PRODUCTION-SHARED.env  HIVE-REPO-HEALTH-KOYEB-ENV-PATCH.txt  HIVE-v1.19-controlled-execution-preview.patch  HIVE-v1.24-KOYEB-ENV-PATCH.txt  HIVE-v1.25-PRODUCTION-EXECUTION-GATES-PATCH.txt  HIVE-v1.26-R2-WRITE-SKILL-MODELS-PATCH.txt  HIVE-v1.26.10-CHAT-PERSISTENCE-SYNC-PATCH.txt  HIVE-v1.26.11-CI-BUILD-MARKER-SYNC-PATCH.md  HIVE-v1.26.12-CLEANUP-DELETE-MANIFEST.txt  HIVE-v1.26.2-FILE-SKILL-APPLY-FLOW-PATCH.txt  HIVE-v1.26.4-HELPER-ORCHESTRATION-PATCH.txt  HIVE-v1.26.9-KOYEB-E-MEDIUM-ENV.txt  HIVE-v1.26.9-REVIEW-STATE-SYNC-PATCH.txt  LICENSE  PATCH_SUMMARY.txt  PATCH_SUMMARY_v1.9.txt  PRODUCTION_READY_UPDATED_FILES_MANIFEST.txt  README.md  SECURITY.md  V1.17_UPDATED_FILES_MANIFEST.txt  V1.22_UPDATED_FILES_MANIFEST.txt  V1.23_UPDATED_FILES_MANIFEST.txt  V1.24_ECOSYSTEM_HEALTH_UPDATED_FILES_MANIFEST.txt  V1.24_FROZEN_FILES_SHA256.txt  V1.24_UPDATED_FILES_MANIFEST.txt  nixpacks.toml  requirements-dev.txt  requirements.in  requirements.txt
backend/: pyproject.toml
backend/app/: ecosystem.py  main.py  models.py
backend/tests/: test_ai_search_retry.py  test_auth_rate_limit.py  test_brand_modes.py  test_catalogue_metadata.py  test_chunking.py  test_context_manager.py  test_database_layer.py  test_env_split.py  test_file_read_and_chat.py  (+46 more)
(+173 files in other folders)
