[project]
name = "jh-ops-chat-backend"
version = "0.1.0"
description = "Standalone Python OpenRouter ops chatbot backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "boto3>=1.34.0",
  "aiosqlite>=0.20.0",
  "pypdf>=4.3.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "beautifulsoup4>=4.12.3",
  "tiktoken>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
